--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@ layout: default
           </span>
         </h2>
     </header>
-    
+    {% if site.cover %}
+    <footer class="absolute left-0 right-0 bottom-0">
+      <a class="ampstart-readmore py3 caps line-height-2 text-decoration-none center block h5" href="#content"><span class="ampstart-readmore-text px1">Read more</span></a>
+    </footer>
+    {% else %}
+    <footer class="absolute left-0 right-0 bottom-0">
+      <a class="ampstart-read py3 caps line-height-2 text-decoration-none center block h5" href="#content"><span class="ampstart-readmore-text px1">Read more</span></a>
+    </footer>
+    {% endif %}
     </figcaption>
   </figure>
 
